<resources>
    <string name="kakao_app_key">e2be04788cd082723365b6868a040b04</string>
    <string name="google_status_fmt">google_status_fmt</string>
    <string name="firebase_status_fmt">firebase_status_fmt</string>
    <string name="facebook_app_id">321035648755011</string> <string name="fb_login_protocol_scheme">fb321035648755011</string>
    <string name="app_name">Lockey</string>
    <string name="loading">loading</string>
    <string name="signed_out">signed_out</string>
    <string name="app_ver">Version 0.5.01</string>
    <string name="release_date">2019. 03. 08.</string>
    <string name="copyright">Copyright 2019 The Deadline Studio. All Rights Reserved.</string>
    <!--tabs-->
    <string name="tab_home">홈</string>
    <string name="tab_setting">설정</string>
    <string name="tab_analysis">분석</string>
    <string name="tab_applist">앱 잠금하기</string>

    <!--Common Strings-->
    <string name="id">아이디</string>
    <string name="nickname">닉네임</string>
    <string name="age">나이</string>
    <string name="job">직업</string>
    <string name="time">시간</string>
    <string name="lock">잠금</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="lock_en">LOCK</string>
    <string name="key_en">KEY</string>
    <string name="lockey">라키</string>
    <string name="lockey_en">LOCKEY</string>
    <string name="start">시작</string>
    <string name="stop">정지</string>
    <string name="confirm">확인</string>
    <string name="help">도움말</string>
    <string name="helpclose">도움말 닫기</string>
    <!--Login Activity-->
    <string name="loginInfoTitle">효율적인 시간 관리 서비스</string>
    <string name="loginInfosubTitle">당신의 시간은 항상 소중하니까</string>
    <string name="login">로그인</string>
    <string name="noMemLogin">비회원으로 시작하기 ></string>
    <string name="googleLogin">구글로 로그인</string>
    <string name="naverLogin">네이버로 로그인</string>
    <string name="FacebookLogin">페이스북으로 로그인</string>
    <string name="kakaoLogin">카카오로 로그인</string>

    <string name="googleSignup">구글로 가입하기</string>
    <string name="naverSignup">네이버로 가입하기</string>
    <string name="FacebookSignup">페이스북으로 가입하기</string>
    <string name="kakaoSignup">카카오로 가입하기</string>
    <string name="terms">회원가입 진행 시 라키의 서비스이용약관, 개인정보처리방침, 개인정보수집이용에 동의하신 것으로 확인합니다.</string>

    <!--Timer Fragment-->
    <string name="btwHourMin">:</string>
    <string name="disableNotiSound">알람없음</string>
    <string name="remainTime">남은시간</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="focusComp">집중완료</string>
    <string name="whatdoyoudo">무엇에 집중하셨나요?</string>
    <string name="quatertime">+1h</string>
    <string name="halftime">+2h</string>
    <string name="tripletime">+3h</string>
    <string name="fulltime">+4h</string>

    <!--Applock Fragment-->
    <string name="recentWeek">최근 1주일 동안</string>
    <string name="mostApp">가장 많이 사용한 앱</string>
    <string name="selectAll">전체 선택</string>
    <string name="selectNone">전체 해제</string>

    <!--Analysis Fragment-->
    <string name="totalFocusTime">총 집중시간</string>
    <string name="dailyTab">일</string>
    <string name="weeklyTab">주</string>
    <string name="monthlyTab">월</string>
    <string name="totalTab">년</string>
    <string name="total">총</string>
    <string name="average">평균</string>
    <string name="noMemberFrame">분석 서비스는 회원만 가능합니다</string>

    <!-- Setting Fragment-->
    <string name="profileCheck">프로필 확인 및 수정</string>
    <string name="profileEdit">프로필 수정</string>
    <string name="serviceOut">서비스 탈퇴하기 ></string>
    <string name="opensource">오픈소스 라이센스 ></string>
    <string name="nicknameChange">닉네임 변경</string>
    <string name="insertNewNickname">새로운 닉네임을 입력해주세요</string>

    <!--SignUp Activity-->
    <string name="signup">회원가입</string>
    <string name="nickname_example">닉네임을 입력해주세요</string>
    <string name="age_example">나이를 입력해주세요</string>
    <string name="job_example">직업을 입력해주세요</string>
    <string name="signup_btn">가입하기</string>
    <string-array name="job_list">
        <item>중/고등학생</item>
        <item>대학생</item>
        <item>취준생</item>
        <item>개발자</item>
        <item>디자이너</item>
        <item>교사/강사</item>
        <item>회사원</item>
        <item>기타</item>
    </string-array>


</resources>
