<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/profileEditToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:text="@string/profileEdit"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/profileEditSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"

            android:layout_gravity="end"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack_light"
            android:textSize="16sp"
            android:text="@string/save" />
        <ImageView
            android:id="@+id/profileEditCancel"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="30dp"
            android:layout_gravity="start"
            app:srcCompat="@drawable/close_btn_img_black" />
    </android.support.v7.widget.Toolbar>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintTop_toBottomOf="@+id/profileEditToolbar">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorWhite"
            android:text="@string/id"
            android:textColor="@color/colorBlack_light"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/proEditIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@color/colorWhite"
            android:text="@string/id"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorWhite"
            android:text="@string/nickname"
            android:textColor="@color/colorBlack_light"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/proEditNickText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:background="@color/colorWhite"
            android:hint="@string/nickname_example"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorWhite"
            android:text="@string/job"
            android:textColor="@color/colorBlack_light"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/editJobSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="8"
            android:entries="@array/job_list"
            android:overlapAnchor="false"
            android:scrollbarThumbVertical="@drawable/scrollbar_style"
            android:spinnerMode="dropdown"
            android:verticalScrollbarPosition="right" />

        <EditText
            android:id="@+id/editJobText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="text"
            android:hint="@string/job_example" />

        <TextView
            android:id="@+id/serviceOutLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:background="@color/colorWhite"
            android:text="@string/serviceOut"
            android:textColor="@color/darkGrey"
            android:textSize="14sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>