<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="26sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/nicknameChange"
        android:gravity="center"
        app:fontFamily="@font/my_font_family"
        android:includeFontPadding="false"/>

    <EditText
        android:id="@+id/newNicknameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="text"
        android:hint="@string/insertNewNickname"
        app:fontFamily="@font/my_font_family"
        android:includeFontPadding="false"/>

    <Button
        android:id="@+id/saveChangeBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:text="@string/confirm"
        app:fontFamily="@font/my_font_family"
        android:includeFontPadding="false"/>
</LinearLayout>