<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/lockey_newicon" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/lockey_en"
                app:fontFamily="@font/my_font_family"
                android:includeFontPadding="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/loginInfoTitle"
                app:fontFamily="@font/my_font_family"
                android:includeFontPadding="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/darkGrey"
                android:text="@string/loginInfosubTitle"
                app:fontFamily="@font/my_font_family"
                android:includeFontPadding="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/selectSignUpBtn"
                android:layout_width="325dp"
                android:layout_height="52dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_hard_round_color"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/signup"
                app:fontFamily="@font/my_font_family"
                android:includeFontPadding="false"/>

            <Button
                android:id="@+id/selectLoginBtn"
                android:layout_width="325dp"
                android:layout_height="52dp"
                android:elevation="0dp"
                android:background="@drawable/btn_hard_round"
                android:stateListAnimator="@null"
                android:textSize="18sp"
                android:textColor="@color/darkGrey"
                android:text="@string/login"
                app:fontFamily="@font/my_font_family"
                android:includeFontPadding="false"/>

            <TextView
                android:id="@+id/noMemberBtn"
                android:layout_width="325dp"
                android:layout_height="52dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:text="@string/noMemLogin"
                app:fontFamily="@font/my_font_family"
                android:includeFontPadding="false"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
