<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/checkVerToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:text="@string/lockey"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/checkVerBackBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:layout_gravity="start"
            app:srcCompat="?attr/actionModeCloseDrawable"/>
    </android.support.v7.widget.Toolbar>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintTop_toBottomOf="@+id/checkVerToolbar">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_foreground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"

            android:background="@color/colorWhite"
            android:text="@string/lockey"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"

            android:background="@color/colorWhite"
            android:text="@string/app_ver"
            android:gravity="center"
            android:textColor="@color/colorBlack_light"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"

            android:background="@color/colorWhite"
            android:text="@string/copyright"
            android:gravity="center"
            android:textColor="@color/colorBlack_light"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/OpenSourceGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"

            android:background="@color/colorWhite"
            android:text="@string/opensource"
            android:gravity="center"
            android:textColor="@color/colorBlack_light"
            android:textSize="12sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>