<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    android:layout_width="275dp"
    android:layout_height="300dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cancel_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_stroke"
            android:padding="12dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:elevation="0dp"
                app:srcCompat="@drawable/googleg_standard_color_18" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/googleSignup"
                app:fontFamily="@font/my_font_family"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/naverBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="#1EC800"
            android:padding="12dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/naver_login_icon"
                android:elevation="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/naverSignup"
                android:textColor="#FFF"
                app:fontFamily="@font/my_font_family"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/kakaoBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:background="#ffeb00"
            android:padding="12dp"
            android:textColor="#3c1e1e">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:elevation="0dp"
                app:srcCompat="@drawable/kakao_account_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/kakaoSignup"
                app:fontFamily="@font/my_font_family"/>
        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/cancel_signup"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWhite"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:fontFamily="@font/my_font_family"/>
</android.support.constraint.ConstraintLayout>
